<resources>
    <string name="appName">StudentChecker</string>
    <string name="greetingH1">Здравствуйте!</string>
    <string name="greetingP">Для использования приложения\nнеобходима авторизация</string>
    <string name="btnGreeting">ВХОД</string>

    <!-- Строки для LoginFragment -->
    <string name="LoginH1">Вход</string>
    <string name="btnLogin">ВОЙТИ</string>
    <string name="password">Пароль</string>
    <string name="name">Имя учетной записи</string>
    <string name="loginH2">с учетной записью вычислительной\nсистемы ИМИТ (kappa)</string>

    <!-- Строки для ScanningFragment -->
    <string name="scanning_title">Сканирование\nактивно</string>
    <string name="scanning_menu_button_desc">Открыть меню</string>
    <string name="scanning_stats_button_desc">Открыть статистику</string>
    <string name="scanning_pause_button_desc">Приостановить сканирование</string>
    <string name="scanning_stop_button_desc">Остановить сканирование</string>

    <!-- Строки для ScanningFinishedFragment -->
    <string name="finished_title">Сканирование\nзавершено</string>
    <string name="finished_menu_button_desc">Открыть меню</string>
    <string name="finished_close_button_desc">Закрыть сканирование</string>
    <string name="finished_stats_button_desc">Открыть статистику</string>
    <string name="finished_delete_button_desc">Удалить сканирование</string>

    <!-- Строки для ScanningInactiveFragment -->
    <string name="inactive_title">Сканирование\nнеактивно</string>
    <string name="inactive_menu_button_desc">Открыть меню</string>
    <string name="inactive_start_button_text">ЗАПУСТИТЬ</string>
    <string name="inactive_start_button_desc">Начать сканирование</string>
    <string name="inactive_subtitle">Нажмите кнопку, чтобы начать\nсканирование</string>

    <!-- Строки для ScanningPausedFragment -->
    <string name="paused_title">Сканирование\nприостановлено</string>
    <string name="paused_menu_button_desc">Открыть меню</string>
    <string name="paused_stats_button_desc">Открыть статистику</string>
    <string name="paused_resume_button_desc">Возобновить сканирование</string>
    <string name="paused_stop_button_desc">Остановить сканирование</string>

    <!-- Строки для ScanningStudentFragment -->
    <string name="student_menu_button_desc">Открыть меню</string>
    <string name="student_scan_status_inactive">Сканирование\nнеактивно</string>
    <string name="student_scan_status_active">Сканирование\nактивно</string>
    <string name="student_scanned_message">Вы отсканированы!</string>

    <!-- Строки для SettingsFragment -->
    <string name="settings_close_button_desc">Закрыть меню</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_default_device">Назначить устройством по умолчанию</string>
    <string name="settings_teacher_section_title">Настройки сканирования</string>
    <string name="settings_scan_interval_label">Интервал</string>
    <string name="settings_scan_interval_minutes">минут</string>
    <string name="settings_save_button">Сохранить</string>
    <string name="settings_save_button_desc">Сохранить интервал сканирования</string>
    <string name="settings_interval_error">Введенное значение должно быть от 10 до 80 минут</string>
    <string name="settings_profile_title">Профиль</string>
    <string name="settings_full_name_label">ФИО</string>
    <string name="settings_group_label">Номер группы</string>
    <string name="scan_interval">10</string>
    <string name="current_user_name">Паньков Владислав Олегович</string>
    <string name="current_user_group">22306</string>
    <string name="settings_logout_button">ВЫЙТИ</string>
    <string name="settings_logout_button_desc">Выйти из аккаунта</string>

    <!-- Строки для StatisticsFragment -->
    <string name="statistics_back_button_desc">Назад</string>
    <string name="statistics_title">Статистика</string>
    <string name="statistics_menu_button_desc">Открыть меню</string>
    <string name="statistics_last_scan_title">Последнее сканирование</string>
    <string name="statistics_minutes_ago"> минут назад</string>
    <string name="statistics_short_minutes_ago">мин назад</string>
    <string name="statistics_arrived_title">Пришло</string>
    <string name="statistics_departed_title">Ушло</string>
    <string name="statistics_students">студентов</string>
    <string name="statistics_attendance_title">Процент присутствующих</string>
    <string name="statistics_students_list_button">СПИСОК СТУДЕНТОВ</string>
    <string name="statistics_students_list_button_desc">Открыть список студентов</string>
    <string name="minutes_passed">15</string>
    <string name="students_came">0</string>
    <string name="students_went">0</string>
    <string name="students_percent">75</string>

    <!-- Accessibility descriptions -->
    <string name="action_sign_in">Стартовый экран</string>
    <string name="action_sign_in_short">Экран входа</string>
    <string name="name_field_description">Поле ввода имени пользователя или email</string>
    <string name="password_field_description">Поле ввода пароля</string>
    <string name="login_button_description">Кнопка входа в приложение</string>
    <string name="settings_theme_icon_desc">Иконка темной темы</string>
    <string name="settings_bluetooth_icon_desc">Иконка Bluetooth</string>
    <string name="settings_default_device_icon_desc">Иконка устройства по умолчанию</string>
    <string name="settings_scan_interval_icon_desc">Иконка интервала сканирования</string>
    <string name="settings_scan_interval_hint">10</string>


    <!-- Общие строки для toolbar -->
    <string name="toolbar_menu_desc">Открыть меню</string>
    <string name="toolbar_back_desc">Назад</string>
    <string name="toolbar_close_desc">Закрыть</string>
    <string name="change_theme">Сменить тему</string>
    <string name="settings_bluetooth_desc">Вруби блютуф</string>

</resources>