<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ScanningPausedFragment">

    <!-- Верхняя панель -->
    <include
        layout="@layout/toolbar_top"
        android:id="@+id/includeToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Заголовок -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paused_title_margin_top"
        android:fontFamily="@font/inter"
        android:text="@string/paused_title"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/text_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Иконка сканирования -->
    <ImageView
        android:id="@+id/ivScan"
        android:layout_width="@dimen/image_medium"
        android:layout_height="@dimen/image_medium"
        android:layout_marginTop="@dimen/paused_image_margin_top"
        android:contentDescription="@string/paused_title"
        android:src="@drawable/scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <!-- Нижняя панель с кнопками -->
    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/paused_bottom_panel_margin_bottom"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Кнопка статистики -->
        <ImageButton
            android:id="@+id/btnStatistics"
            android:contentDescription="@string/paused_stats_button_desc"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:padding="@dimen/paused_stats_button_padding"
            android:src="@drawable/baseline_pie_chart_outline_24" />

        <!-- Кнопка возобновления -->
        <ImageButton
            android:id="@+id/btnResume"
            android:contentDescription="@string/paused_resume_button_desc"
            android:layout_width="@dimen/icon_xlarge"
            android:layout_height="@dimen/icon_xlarge"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/paused_resume_button_margin_horizontal"
            android:layout_marginEnd="@dimen/paused_resume_button_margin_horizontal"
            android:backgroundTint="@color/transparent"
            android:padding="@dimen/margin_large"
            android:src="@drawable/baseline_play_circle_outline_24" />

        <!-- Кнопка остановки -->
        <ImageButton
            android:id="@+id/btnEnd"
            android:contentDescription="@string/paused_stop_button_desc"
            android:layout_width="@dimen/icon_large"
            android:layout_height="@dimen/icon_large"
            android:layout_gravity="center"
            android:backgroundTint="@color/transparent"
            android:padding="@dimen/paused_stop_button_padding"
            android:src="@drawable/baseline_square_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>